--- a/apps/android/app/src/main/res/values/themes.xml
+++ b/apps/android/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.Deadbot" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.Cloned" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
